# py-web-hw14

./: README.md  docker-compose.yml  main.py  pyproject.toml  readme.md  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 1e657312187a_init.py  2b7ad3fdb243_init.py  aab17601f663_init.py  bf50a26bab50_init.py  d89ad9cba688_add_user_confirmed.py  eee1c5024cdd_init.py  f0c4c9b9dc9b_init.py  f2f905ab5e67_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/templates/: example_email.html
tests/: pytest_conf.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_route_auth.py
